# paper2voice

./: LICENSE  README.md
paper2voice-public-release/: index.html  package.json  tsconfig.json  vite.config.ts
paper2voice-public-release/scripts/: kokoro_bridge.py  package-macos-private-alpha.sh  requirements-kokoro.txt
paper2voice-public-release/src/: app.ts  style.css
paper2voice-public-release/src-tauri/: Cargo.toml  tauri.conf.json
paper2voice-public-release/src-tauri/capabilities/: default.json
paper2voice-public-release/src-tauri/src/: audio.rs  chunk.rs  clean.rs  commands.rs  errors.rs  lib.rs  main.rs  pdf.rs  tts.rs
